--- a/style/aboutus.html
+++ b/style/aboutus.html
@@ -31,7 +31,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
           </label>
     
-          <a class="home-link" href="home.html">Home</a> <!-- link back to homepage -->
+          <a class="home-link" href="/index.html">Home</a> <!-- link back to homepage -->
           <a href="aboutus.html">About</a> 
           <a href="service.html">Services</a>
           <a href="doctor.html">Doctors</a>
@@ -175,7 +175,7 @@
             <ul class="list">
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="doctor.html">Doctor</a></li>
-                <li><a href="home.html">Services</a></li>
+                <li><a href="/index.html">Services</a></li>
                 <li><a href="consult.html">Pharmacy</a></li>
                 <li><a href="home.html">Patient Testimonial</a></li>
                 <li><a href="home.html">Consultation Reservation</a></li>
