--- a/style/service.html
+++ b/style/service.html
@@ -20,7 +20,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" height="32" viewBox="0 -960 960 960" width="32"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg>
           </label>
     
-          <a class="home-link" href="home.html">Home</a> <!-- link back to homepage -->
+          <a class="home-link" href="/index.html">Home</a> <!-- link back to homepage -->
           <a href="aboutus.html">About</a> 
           <a href="service.html">Services</a>
           <a href="doctor.html">Doctors</a>
@@ -119,7 +119,7 @@
                 <div class="footer-content">
                     <h3>Quick Links</h3>
                     <ul class="list">
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="doctor.html">Doctor</a></li>
                         <li><a href="home.html">Pharmacy</a></li>
