--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="homestyle.css">
-    <link rel="stylesheet" href="aboutus.css">
-    <link rel="stylesheet" href="consult.css">
+    <link rel="stylesheet" href="/style/homestyle.css">
+    <link rel="stylesheet" href="/style/aboutus.css">
+    <link rel="stylesheet" href="/style/consult.css">
     <title>HealingHearts</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
@@ -108,7 +108,7 @@
                 <li> <a href="/style/doctor.html">Doctors</a></li> 
                 <li><a href="/style/pharmacy.html">Pharmacy</a></li>   
                 <li> <a href="/style/testmonial.html">Patient Testimonial</a></li>   
-                <li><a h>ref="/style/consult.html">Consultation Reservation</a></li>
+                <li><a href="/style/consult.html">Consultation Reservation</a></li>
             </ul>
         </div>
         <div class="footer-contentsocial">
